--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,15 @@
 
     {% include header.html %}
 
+    {% include head-2.html %}
+
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
 
-    {% include footer.html %}
+    <!--{% include footer.html %}-->
 
   </body>
 
