--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,35 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {% endif %}
 
-  {{ content }}
+  <div class="home-content">
+    {{ content }}
+  </div>
 
+  <div class="home-content_mark">
+
+    <div style="text-align:center;font-size:18px;padding-bottom:50px;">
+      <p><strong>Freelance scrum product owner | product developer <br /> beschikbaar per 1 april 2018 <br />  </strong></p>
+      <p>  </p>
+
+    </div>
+
+  </div>
+
+  <div style="text-align:justify;">
+    <p>Mijn naam is Mark Brand.</p>
+  </div>
+
+  <div style="text-align:justify;">
+    <p>Ik ben een resultaatgerichte freelance online product developer en scrum product owner met een passie voor het digitaliseren van de business met acht jaar B2C en B2B B e-commerce ervaring bij Nuon/Vattenfall en De Persgroep. Ik heb een bewezen staat van dienst in het verhogen van de winstgevendheid (> 1 mln EBIT bijdrage) middels het initiëren van online optimalisatie- en innovatieprojecten in complexe online omgevingen.</p>
+    <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
+    <p>Per 1 april 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.</p>
+  </div>
+
+  <div style="text-align:justify;">
+    <p>Neem contact met mij op via mark@gonimble.nl.</p>
+  </div>
+
+<!--
   {% if site.posts.size > 0 %}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
@@ -30,5 +57,6 @@ layout: default
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {% endif %}
+  //-->
 
 </div>
