--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -174,6 +174,8 @@ pre {
   //padding-bottom: $spacing-unit;
   padding-bottom: 0px;
   padding-top: 0px;
+  //padding-left: $spacing-unit;
+  //padding-right: $spacing-unit;
   @extend %clearfix;
 
   @include media-query($on-laptop) {
