--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
   </div>
 
   <div style="text-align:justify;">
-    <p>Ik ben een resultaatgerichte freelance online product developer en scrum product owner met een passie voor het digitaliseren van de business met acht jaar B2C en B2B B e-commerce ervaring bij Nuon/Vattenfall en De Persgroep. Ik heb een bewezen staat van dienst in het verhogen van de winstgevendheid (> 1 mln EBIT bijdrage) middels het initiëren van online optimalisatie- en innovatieprojecten in complexe online omgevingen.</p>
+    <p>Ik ben een resultaatgerichte freelance online product developer en scrum product owner met een passie voor het digitaliseren van de business. Met acht jaar B2C en B2B e-commerce ervaring heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid middels het initiëren van online optimalisatie- en innovatieprojecten in complexe online omgevingen.</p>
     <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
     <p>Per 1 april 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.</p>
   </div>
