--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: default
 
   <div class="home-content_mark">
 
-    <div style="text-align:center;font-size:18px;padding-bottom:50px;">
-      <p><strong>Freelance scrum product owner | product developer <br /> beschikbaar per 1 april 2018 <br />  </strong></p>
+    <div style="text-align:center;font-size:18px;padding-bottom:40px;">
+      <p><strong>Freelance scrum product owner | product manager online <br /> beschikbaar per 1 april 2018 <br />  </strong></p>
       <p>  </p>
 
     </div>
@@ -26,14 +26,20 @@ layout: default
   </div>
 
   <div style="text-align:justify;">
-    <p>Ik ben een resultaatgerichte freelance online product developer en scrum product owner met een passie voor het digitaliseren van de business. Met acht jaar B2C en B2B e-commerce ervaring heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid middels het initiëren van online optimalisatie- en innovatieprojecten in complexe online omgevingen.</p>
+    <p>Ik ben een gecertificeerde scrum product owner met een passie voor het digitaliseren van de business. Met acht jaar B2C en B2B e-commerce ervaring heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid middels het initiëren en uitvoeren van optimalisatie- en innovatieprojecten in complexe online omgevingen.</p>
     <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
     <p>Per 1 april 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.</p>
   </div>
 
-  <div style="text-align:justify;">
+  <div style="text-align:justify;padding-bottom:40px;">
     <p>Neem contact met mij op via mark@gonimble.nl.</p>
   </div>
+
+<!--
+  <div style="text-align:center;font-size:14px;">
+    <p>English</p>
+  </div>
+  //-->
 
 <!--
   {% if site.posts.size > 0 %}
