--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -54,8 +54,10 @@
 }
 
 .footer-heading {
-  @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit / 2;
+  @include relative-font-size(0.85);
+  margin-bottom: 0; //$spacing-unit / 2;
+  //padding-left: $spacing-unit * 3;
+  //padding-right: $spacing-unit * 3;
 }
 
 .contact-list,
@@ -65,13 +67,13 @@
   margin-right: auto;
 }
 
-.footer-col-wrapper {
-  @include relative-font-size(0.9375);
-  color: $grey-color;
-  margin-left: auto;
-  margin-right: auto;
-  @extend %clearfix;
-}
+//.footer-col-wrapper {
+  //@include relative-font-size(0.9375);
+  //color: $grey-color;
+  //margin-left: auto;
+  //margin-right: auto;
+  //@extend %clearfix;
+//}
 
 .footer-col {
   float: left;
