--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
   <div class="home-content_mark">
 
     <div style="text-align:center;font-size:18px;padding-bottom:40px">
-      <p><strong>Freelance scrum product owner | product manager online <br /> beschikbaar per 1 april 2018 <br />  </strong></p>
+      <p><strong>Freelance scrum product owner | digital product developer <br /> beschikbaar per 1 april 2018 <br />  </strong></p>
 
     </div>
 
