Datum beschikbaar verwijderen

--- a/_layouts/home_withdate.html
+++ b/_layouts/home_withdate.html
@@ -15,7 +15,6 @@ layout: default
 
     <div style="text-align:center;font-size:18px;padding-bottom:40px">
       <p><strong>Freelance scrum product owner | digital product developer <br /> beschikbaar per 1 juli 2018 <br />  </strong></p>
-
     </div>
 
   </div>
@@ -28,7 +27,8 @@ layout: default
     <p>Ik ben een gecertificeerde scrum product owner met een passie voor het digitaliseren van de business. Met acht jaar B2C en B2B e-commerce ervaring heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid middels het initiëren en uitvoeren van optimalisatie- en innovatieprojecten in complexe online omgevingen. Als positieve challenger ben ik toegewijd aan het creëren van de ultieme digitale gebruikerservaring.</p>
     <p>Ik heb uitgebreide ervaring met het werken met full-stack DevOps-teams volgens Agile- en Lean UX-principes in continuous integration / continuous deployment omgevingen.</p>
     <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
-    <p>Per 1 juli 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.</p>
+    <p>
+    <p>Per 1 juli 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.
   </div>
 
   <div style="text-align:justify;padding-bottom:20px;">
@@ -65,5 +65,27 @@ layout: default
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {% endif %}
   //-->
+
+  <footer class="site-footer h-card">
+    <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+      <h2 class="footer-heading">
+          <div style="text-align:justify;padding-bottom:10px;">
+            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  continuous integration / continuous development  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  ondernemend  |  keep it simple  |  benaderbaar</p>
+          </div>
+      </h2>
+
+    <a href="https://www.linkedin.com/in/mrkbrnd/?locale=nl_NL" target="_blank"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
+
+
+        <h2 class="footer-heading">
+            <div style="text-align:center;padding-top:20px;">
+              <a href="/english.html"><span style="text-decoration: underline;">English</span></a>
+            </div>
+        </h2>
+
+    </div>
+
+  </footer>
 
 </div>
