--- a/_layouts/home_withdate.html
+++ b/_layouts/home_withdate.html
@@ -14,7 +14,7 @@ layout: default
   <div class="home-content_mark">
 
     <div style="text-align:center;font-size:18px;padding-bottom:40px">
-      <p><strong>Freelance scrum product owner | digital product developer<br />  </strong></p>
+      <p><strong>Freelance scrum product owner | digital product developer <br /> beschikbaar per 1 juli 2018 <br />  </strong></p>
     </div>
 
   </div>
@@ -28,6 +28,7 @@ layout: default
     <p>Ik heb uitgebreide ervaring met het werken met full-stack DevOps-teams volgens Agile- en Lean UX-principes in continuous integration / continuous deployment omgevingen.</p>
     <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
     <p>
+    <p>Per 1 juli 2018 ben ik beschikbaar om jou te helpen de digitale transformatie van je organisatie te versnellen.
   </div>
 
   <div style="text-align:justify;padding-bottom:20px;">
