Profiel update na 2 jr KVK
Nederlandse en Engelse profiel geupdate, nieuwe functienaam, font titel "Go Nimble" groter gemaakt

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: default
 
   <div class="home-content_mark">
 
-    <div style="text-align:center;font-size:18px;padding-bottom:40px">
-      <p><strong>Freelance scrum product owner | digital product developer<br />  </strong></p>
+    <div style="text-align:center;font-size:20px;padding-bottom:40px">
+      <p><strong>Interim Product Manager | Product Owner Online<br />  </strong></p>
     </div>
 
   </div>
@@ -24,9 +24,11 @@ layout: default
   </div>
 
   <div style="text-align:justify;">
-    <p>Ik ben een gecertificeerde scrum product owner met een passie voor het digitaliseren van de business. Met acht jaar B2C en B2B e-commerce ervaring heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid middels het initiëren en uitvoeren van optimalisatie- en innovatieprojecten in complexe online omgevingen. Als positieve challenger ben ik toegewijd aan het creëren van de ultieme digitale gebruikerservaring.</p>
-    <p>Ik heb uitgebreide ervaring met het werken met full-stack DevOps-teams volgens Agile- en Lean UX-principes in continuous integration / continuous deployment omgevingen.</p>
-    <p>Ik ben een sterke communicator en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en belanghebbenden. Ik krijg energie van het bouwen van business- en ontwikkelteams met een gedeelde visie en drive om te presteren en te leveren.</p>
+    <p>Ik ben een ervaren en gecertificeerde freelance scrum product owner met een passie voor het digitaliseren van de business creëer. In samenwerking met full-stack DevOps-teams, designers en analisten creëer ik ultieme digitale gebruikerservaringen</p>
+    <p>Als senior product owner heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid (> 1 mln. EBIT-bijdrage) van high-traffic websites middels het initiëren en uitvoeringen van online product development trajecten in complexe organisatorische en online omgevingen.</p>
+    <p>Mijn aanpak kenmerkt zich door het vertalen van de organisatiestrategie naar een gedragen online product visie en het stap voor stap bouwen aan gebruiksvriendelijke online producten die meetbaar bijdragen aan de gestelde doelen.</p>
+    <p>Ik ben een sterke communicator (RvB niveau) en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en management. Dankzij mij senioriteit lukt het mij goed om mijn stijl van leiderschap aan te laten sluiten op de situatie en context van dat moment. Vaak in de stijl van visionair die het voortouw neemt en duidelijke prioriteiten stelt, als het kan meer in de rol van dienend leider en coach. Het samen met de scrum master smeden van high-performing teams geeft mij veel energie.</p>
+    <p>Mijn jarenlange ervaring in het toepassen van Agile principes - snel live gaan met een minimum viable product en vervolgens op basis van cijfers en gebruikersfeedback continu verbeteren - stelt mij in staat om geen moment te verliezen om waarde toe te voegen voor uw klanten en uw organisatie.</p>
     <p>
   </div>
 
