--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
   </div>
 
   <div style="text-align:justify;">
-    <p>Ik ben een ervaren en gecertificeerde freelance scrum product owner met een passie voor het digitaliseren van de business creëer. In samenwerking met full-stack DevOps-teams, designers en analisten creëer ik ultieme digitale gebruikerservaringen</p>
+    <p>Ik ben een ervaren en gecertificeerde freelance scrum product owner met een passie voor het digitaliseren van de business. In samenwerking met full-stack DevOps-teams, designers en analisten creëer ik ultieme digitale gebruikerservaringen</p>
     <p>Als senior product owner heb ik een bewezen staat van dienst in het verhogen van de winstgevendheid (> 1 mln. EBIT-bijdrage) van high-traffic websites middels het initiëren en uitvoeringen van online product development trajecten in complexe organisatorische en online omgevingen.</p>
     <p>Mijn aanpak kenmerkt zich door het vertalen van de organisatiestrategie naar een gedragen online product visie en het stap voor stap bouwen aan gebruiksvriendelijke online producten die meetbaar bijdragen aan de gestelde doelen.</p>
     <p>Ik ben een sterke communicator (RvB niveau) en onderhandelaar met een scherp oog voor de uitdagingen, behoeften en zorgen van klanten, teamleden en management. Dankzij mij senioriteit lukt het mij goed om mijn stijl van leiderschap aan te laten sluiten op de situatie en context van dat moment. Vaak in de stijl van visionair die het voortouw neemt en duidelijke prioriteiten stelt, als het kan meer in de rol van dienend leider en coach. Het samen met de scrum master smeden van high-performing teams geeft mij veel energie.</p>
@@ -72,7 +72,7 @@ layout: default
 
       <h2 class="footer-heading">
           <div style="text-align:justify;padding-bottom:10px;">
-            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  continuous integration / continuous development  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  ondernemend  |  keep it simple  |  benaderbaar</p>
+            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  continuous integration / continuous delivery  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  ondernemend  |  keep it simple  |  benaderbaar</p>
           </div>
       </h2>
 
