--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,7 +76,7 @@ layout: default
           </div>
       </h2>
 
-    <a href="https://www.linkedin.com/in/mrkbrnd/?locale=nl_NL" target="_blank"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
+    <a href="https://www.linkedin.com/in/mrkbrnd/?locale=nl_NL" target="_blank" rel="noopener"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
 
 
         <h2 class="footer-heading">
