Toegankelijkheid toegevoegd aan wordcloud

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,7 +72,7 @@ layout: default
 
       <h2 class="footer-heading">
           <div style="text-align:justify;padding-bottom:10px;">
-            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  continuous integration / continuous delivery  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  ondernemend  |  keep it simple  |  benaderbaar</p>
+            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  toegankelijkheid  |  continuous integration / continuous delivery  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  ondernemend  |  keep it simple  |  benaderbaar</p>
           </div>
       </h2>
 
